
Not yet released - available from CVS or in the latest snapshot:
----------------------------------------------------------------

Enhancements:

Oracle Plugin:

 - Allow the user to configure whether or not to show the syntax error offset in 
   the SQL Editor.  This feature creates a user-defined function called 
   SQUIRREL_GET_ERROR_OFFSET, which can be disabled.

PostgreSQL Plugin:

Contributions from Daniel Regli and Yannick Winiger:
- Menu: added a new "PostgreSQL" menu to the object tree and the session menu for
  Postgres specific functionalities.
- Vacuum: added visual (dialog) support for the PostgreSQL-specific VACUUM statement for
  garbage-collecting a selection of tables or the whole database.
- Explain: added an additional SQLResultExecuter to the sql panel that shows
  the query plan of executed statements.

Refactoring Plugin:
 - Don't try to order the list of tables to be dropped (forcing FK info retrieval) 
   when there is only one table being dropped.

  Contributions from Daniel Regli and Yannick Winiger:
  Added new Refactorings (All new refactoring dialogs are now closeable with the ESCAPE key):
    - Rename Table
    - Add/Rename/Drop View
    - Add/Modify/Drop Sequence
    - Add/Drop Index
    - Add/Drop Foreign Key
    - Add/Drop Unique Constraint
    - Add Lookup Table
    - Add Auto Increment
    - Merge Column
    - Merge Table

Bug-Fixes:

1861402 (Informix catalog switching doesn't work correctly) 
 - Better catalog switching behavior for databases that support catalogs.  Now if a connection is made without specifying the catalog, a place-holder
   catalog ("None") is inserted into the catalog drop-down menu and removed once a catalog is selected.  
 - Fixed a race condition that caused the tree to be refreshed before data was refreshed from the database 
   when the catalog was switched.  
 - For Informix, setCatalog seems to have no effect, so now an explicit DATABASE <catalogname> command is 
   issued. 

Derby Plugin: